--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "**.d.ts"]
+  "include": ["src", "**.d.ts", "src/services/api/index.js"]
 }
